Tutor 4 Selesai yayyy

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<nav class="navbar" style="background-color: #0D6EFD;">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">{{name}}</span>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="{% url 'main:create_product' %}"><button class ="btn btn-light">Add New Product</button>
+                <a href="{% url 'main:logout' %}"><button class="btn btn-danger">Logout</button></a>
+                </a>
+            </li>
+            <li>
+
+        </ul>
+    </div>
+</nav>
+
     <h1>Shopping List Page</h1>
 
     <h5>Name:</h5>
@@ -10,7 +26,7 @@
     <p>{{class}}</p>
 
     ...
-<table>
+<table class="table table-bordered">
     <tr>
         <th>Name</th>
         <th>Price</th>
@@ -26,23 +42,19 @@
             <td>{{product.price}}</td>
             <td>{{product.description}}</td>
             <td>{{product.date_added}}</td>
+            <td>
+                <a href="{% url 'main:edit_product' product.pk %}" class="btn btn-primary">Edit</a>
+            </td>
+            <td>
+                <a href="{% url 'main:delete_product' product.pk %}" class ="btn btn-primary">Delete</a>
+            </td>
         </tr>
     {% endfor %}
 </table>
 
 <br />
 
-<a href="{% url 'main:create_product' %}">
-    <button>
-        Add New Product
-    </button>
-</a>
-
-<a href="{% url 'main:logout' %}">
-    <button>
-        Logout
-    </button>
-</a>
+<a href="{% url 'main:create_product' %}" class ="btn btn-primary">Add New Product</a>
 
 <h5>Sesi terakhir login: {{ last_login }}</h5>
 
